--- a/src/app/components/internal/Page/page-overwrites.scss
+++ b/src/app/components/internal/Page/page-overwrites.scss
@@ -53,3 +53,9 @@ main[data-page|='whats-new'] {
     border: 1px solid $ui-04;
   }
 }
+
+main[data-page='style-spacing'] {
+  img {
+    background-color: $ui-02;
+  }
+}
